WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
102282
[chromium/mac] Fix drawing of buttons, checkboxes, radio boxes, and steppers when the page is scaled
https://bugs.webkit.org/show_bug.cgi?id=102282
Summary
[chromium/mac] Fix drawing of buttons, checkboxes, radio boxes, and steppers ...
Nico Weber
Reported
2012-11-14 13:51:43 PST
[chromium/mac] Fix drawing of buttons, checkboxes, radio boxes, and steppers when the page is scaled
Attachments
Patch
(3.84 KB, patch)
2012-11-14 13:53 PST
,
Nico Weber
no flags
Details
Formatted Diff
Diff
Patch
(5.72 KB, patch)
2012-11-14 15:48 PST
,
Nico Weber
no flags
Details
Formatted Diff
Diff
Patch
(5.79 KB, patch)
2012-11-14 15:49 PST
,
Nico Weber
no flags
Details
Formatted Diff
Diff
Patch
(5.80 KB, patch)
2012-11-14 15:56 PST
,
Nico Weber
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Nico Weber
Comment 1
2012-11-14 13:53:14 PST
Created
attachment 174249
[details]
Patch
Nico Weber
Comment 2
2012-11-14 15:48:20 PST
Created
attachment 174273
[details]
Patch
Nico Weber
Comment 3
2012-11-14 15:49:35 PST
Created
attachment 174274
[details]
Patch
Nico Weber
Comment 4
2012-11-14 15:53:16 PST
The chromium-side bug of this is
http://crbug.com/161032
James Robinson
Comment 5
2012-11-14 15:53:25 PST
Comment on
attachment 174274
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=174274&action=review
> Source/WebCore/ChangeLog:14 > + Covered by the new pixel test fast/forms/zoomed-controls.html. I > + couldn't find an existing test for this.
explains why it's been broken for so long, i suppose
> LayoutTests/fast/forms/zoomed-controls.html:1 > +<html>
<!DOCTYPE html> before this (unless you really want quirks mode)
> LayoutTests/platform/chromium/TestExpectations:4054 > +# Needs baselines > +Bug(thakis) [ Release ] fast/forms/zoomed-controls.html [ ImageOnlyFailure ]
can you at least add some mac baselines?
Nico Weber
Comment 6
2012-11-14 15:56:05 PST
Created
attachment 174275
[details]
Patch
Nico Weber
Comment 7
2012-11-14 15:56:58 PST
(In reply to
comment #5
)
> (From update of
attachment 174274
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=174274&action=review
> > > Source/WebCore/ChangeLog:14 > > + Covered by the new pixel test fast/forms/zoomed-controls.html. I > > + couldn't find an existing test for this. > > explains why it's been broken for so long, i suppose > > > LayoutTests/fast/forms/zoomed-controls.html:1 > > +<html> > > <!DOCTYPE html> before this (unless you really want quirks mode)
Done.
> > > LayoutTests/platform/chromium/TestExpectations:4054 > > +# Needs baselines > > +Bug(thakis) [ Release ] fast/forms/zoomed-controls.html [ ImageOnlyFailure ] > > can you at least add some mac baselines?
From what I understand, that won't match the bots anyway. I'll grab baselines from the bots as soon as possible. (If you just want to know how they look:
http://i.imgur.com/0kR5o.png
is the local -expected.png)
WebKit Review Bot
Comment 8
2012-11-14 17:12:19 PST
Comment on
attachment 174275
[details]
Patch Clearing flags on attachment: 174275 Committed
r134698
: <
http://trac.webkit.org/changeset/134698
>
WebKit Review Bot
Comment 9
2012-11-14 17:12:22 PST
All reviewed patches have been landed. Closing bug.
Eric Seidel (no email)
Comment 10
2012-11-19 15:23:52 PST
***
Bug 102719
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug