[chromium/mac] Fix drawing of buttons, checkboxes, radio boxes, and steppers when the page is scaled https://bugs.webkit.org/show_bug.cgi?id=102282

Reviewed by James Robinson.

Chromium uses skia, and skia state is synced with CG context state at
LocalCurrentGraphicsContext construction time. So delay that
construction after context transforms have happened.
(This regressed in http://trac.webkit.org/changeset/125830)

Covered by the new pixel test fast/forms/zoomed-controls.html. I
couldn't find an existing test for this.

* platform/mac/ThemeMac.mm:
(WebCore::paintCheckbox):
(WebCore::paintRadio):
(WebCore::paintButton):


git-svn-id: svn://svn.chromium.org/blink/trunk@134698 bbb929c8-8fbe-4397-9dbb-9b2b20218538